--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -65,6 +65,7 @@
     <file>assets/images/password-show-off.svg</file>
     <file>assets/images/password-show-on.svg</file>
     <file>assets/images/person.svg</file>
+    <file>assets/images/pin.png</file>
     <file>assets/images/preferences.svg</file>
     <file>assets/images/qrcode.png</file>
     <file>assets/images/qrcode_white.png</file>
