--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -122,7 +122,7 @@
               </property>
               <widget class="QWidget" name="tab">
                <attribute name="title">
-                <string>CCS</string>
+                <string>Crowdfunding</string>
                </attribute>
                <layout class="QVBoxLayout" name="verticalLayout_6">
                 <property name="leftMargin">
@@ -479,7 +479,7 @@
      <x>0</x>
      <y>0</y>
      <width>977</width>
-     <height>27</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
