--- a/src/plugins/ccs/CCSWidget.ui
+++ b/src/plugins/ccs/CCSWidget.ui
@@ -30,20 +30,17 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QTableView" name="tableView">
+    <widget class="QTreeView" name="treeView">
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
-     <property name="editTriggers">
-      <set>QAbstractItemView::NoEditTriggers</set>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
      </property>
-     <property name="selectionMode">
-      <enum>QAbstractItemView::SingleSelection</enum>
-     </property>
-     <property name="sortingEnabled">
+     <property name="rootIsDecorated">
       <bool>false</bool>
      </property>
-     <attribute name="horizontalHeaderStretchLastSection">
+     <attribute name="headerStretchLastSection">
       <bool>false</bool>
      </attribute>
     </widget>
