--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -28,6 +28,7 @@
     <file>assets/images/coldcard_unpaired.png</file>
     <file>assets/images/confirmed.svg</file>
     <file>assets/images/connect.svg</file>
+    <file>assets/images/connect_white.svg</file>
     <file>assets/images/copy.png</file>
     <file>assets/images/edit.png</file>
     <file>assets/images/external-link.svg</file>
