--- a/src/plugins/bounties/BountiesWidget.ui
+++ b/src/plugins/bounties/BountiesWidget.ui
@@ -31,6 +31,12 @@
      <property name="contextMenuPolicy">
       <enum>Qt::CustomContextMenu</enum>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="sortingEnabled">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
   </layout>
