--- a/src/plugins/calc/CalcWindow.ui
+++ b/src/plugins/calc/CalcWindow.ui
@@ -37,7 +37,7 @@
   <customwidget>
    <class>CalcWidget</class>
    <extends>QWidget</extends>
-   <header>CalcWidget.h</header>
+   <header>plugins/calc/CalcWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
